--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ class="button" href="https://prefeitura.poa.br/carta-de-servicos/conselho-tutela
     <div class="text">
       <h2 class="title">Faça sua Denúncia</h2>
       
-      <p>Entre em contato agora e defenda o a infância.</p>
+      <p>Entre em contato agora e defenda a infância.</p>
       
       <a href="https://api.whatsapp.com/send/?phone=555134330156&text&type=phone_number&app_absent=0"
       class="button"
